@@ -26,24 +26,42 @@
 #endif
 
 
-/* Initialisation and finalisation
+/* SQL
  * ***************************************************************** */
 
 /* The functions in this section actually serve to handle prepared SQL
    statements, compiled once and for all from these SQL statements. */
-static const char *echo_upgrade_add_echo_challange_field_text
-= "   ALTER TABLE Identity"
-    " ADD COLUMN echo_challenge BLOB;";
 static const char *echo_get_challenge_text
-= "   SELECT echo_challenge"
-    " FROM Identity I"
-    " WHERE I.address = ?1"
-    " AND I.user_id = ?2;";
+= " SELECT echo_challenge"
+  " FROM Identity I"
+  " WHERE     I.address = ?1"
+  "       AND I.user_id = ?2;";
 static const char *echo_set_challenge_text
-= "   UPDATE Identity"
-    " SET echo_challenge = ?1"
-    " WHERE address = ?2"
-    " AND user_id = ?3;";
+= " UPDATE Identity"
+  " SET echo_challenge = ?1" /* we do not set the timestamp as well here,
+                                by design: setting the timestamp is a separate,
+                                explicit operation. */
+  " WHERE     address = ?2"
+  "       AND user_id = ?3;";
+static const char *echo_get_echo_below_rate_limit_text
+= " SELECT CASE WHEN I.last_echo_timestamp IS NULL THEN"
+  "          true"
+  "        ELSE"
+  "          (I.last_echo_timestamp + ?1) < CAST(strftime('%s') AS INTEGER)"
+  "        END AS below_rate_limit"
+  " FROM Identity I"
+  " WHERE     I.address = ?2"
+  "       AND I.user_id = ?3;";
+static const char *echo_set_timestamp_text
+= " UPDATE Identity"
+  " SET last_echo_timestamp = CAST(strftime('%s') AS INTEGER)"
+  " WHERE     address = ?1"
+  "       AND user_id = ?2;";
+/*
+  This is very convenient for testing:
+
+  UPDATE Identity SET last_echo_timestamp = NULL;
+*/
 
 /* This is a convenient way to check for SQL errors without duplicating code. */
 #define ON_SQL_ERROR_SET_STATUS_AND_GOTO               \
@@ -105,6 +123,45 @@ static PEP_STATUS upgrade_add_echo_challange_field(PEP_SESSION session) {
     }
 }
 
+/**
+ *  <!--       upgrade_add_echo_last_echo_timestamp_field()       -->
+ *
+ *  @brief Exactly like upgrade_add_echo_challenge_field, with a different
+ *         field: add a timestamp change recording the time the last Echo
+ *         protocol message (be it Ping or Pong) was sent.
+ */
+static PEP_STATUS upgrade_add_echo_last_echo_timestamp_field(
+   PEP_SESSION session) {
+    /* Sanity checks. */
+    assert(session);
+    if(! (session))
+        return PEP_ILLEGAL_VALUE;
+
+    /* Alter the table.  This is executed only once at initialisation time,
+       so keeping the SQL statement prepared would be counter-productive. */
+    int sql_status
+        = sqlite3_exec(session->db,
+                       " ALTER TABLE Identity"
+                       " ADD COLUMN last_echo_timestamp INTEGER DEFAULT NULL;"
+                       , NULL, NULL, NULL);
+    switch (sql_status) {
+    case SQLITE_OK:
+        /* Upgrading was successful. */
+        return PEP_STATUS_OK;
+    case SQLITE_ERROR:
+        /* Upgrading was not needed, but this is not a problem: the column
+           we want to add exists. */
+        return PEP_STATUS_OK;
+    default:
+        /* An actual unforeseen error. */
+        return PEP_UNKNOWN_DB_ERROR;
+    }
+}
+
+
+/* Initialisation and finalisation
+ * ***************************************************************** */
+
 PEP_STATUS echo_initialize(PEP_SESSION session)
 {
     /* Sanity checks. */
@@ -113,10 +170,13 @@ PEP_STATUS echo_initialize(PEP_SESSION session)
         return PEP_ILLEGAL_VALUE;
 
     /* Change the schema if needed, once and for all.  We want to do this
-       *before* prepraring statements using the new column that is created by
+       *before* prepraring statements using the new columns that are created by
        this upgrade. */
     PEP_STATUS status = PEP_STATUS_OK;
     status = upgrade_add_echo_challange_field(session);
+    if (status != PEP_STATUS_OK)
+        goto end;
+    status = upgrade_add_echo_last_echo_timestamp_field(session);
     if (status != PEP_STATUS_OK)
         goto end;
 
@@ -132,7 +192,16 @@ PEP_STATUS echo_initialize(PEP_SESSION session)
                                     -1, &session->echo_set_challenge,
                                     NULL);
     ON_SQL_ERROR_SET_STATUS_AND_GOTO;
-    
+    sql_status = sqlite3_prepare_v2(session->db,
+                                    echo_get_echo_below_rate_limit_text, -1,
+                                    &session->echo_get_echo_below_rate_limit,
+                                    NULL);
+    ON_SQL_ERROR_SET_STATUS_AND_GOTO;
+    sql_status = sqlite3_prepare_v2(session->db, echo_set_timestamp_text,
+                                    -1, &session->echo_set_timestamp,
+                                    NULL);
+    ON_SQL_ERROR_SET_STATUS_AND_GOTO;
+
  end:
     return status;
 }
@@ -147,7 +216,174 @@ PEP_STATUS echo_finalize(PEP_SESSION session)
     /* Finialise prepared SQL statements. */
     sqlite3_finalize(session->echo_get_challenge);
     sqlite3_finalize(session->echo_set_challenge);
+    sqlite3_finalize(session->echo_get_echo_below_rate_limit);
+    sqlite3_finalize(session->echo_set_timestamp);
     return PEP_STATUS_OK;
+}
+
+
+/* Utility
+ * ***************************************************************** */
+
+/**
+ *  <!--       make_sure_identity_exists()       -->
+ *
+ *  @brief Make sure that the given identity exists in the database.
+ *
+ *  @param[in]   session             session
+ *  @param[in]   identity            the identity we are dealing with
+ *
+ *  @retval PEP_STATUS_OK            success
+ *  @retval any other value          error
+ *
+ */
+static PEP_STATUS make_sure_identity_exists(PEP_SESSION session,
+                                            const pEp_identity *identity)
+{
+    assert(session && identity);
+    if(! (session && identity))
+        return PEP_ILLEGAL_VALUE;
+
+    PEP_STATUS status = PEP_STATUS_OK;
+    pEp_identity *identity_copy = NULL;
+
+    /* Make a copy of the given identity and update it... */
+    /* FIXME: ideally there should be no need to do this if we call these
+       functions from decrypt_message or outgoing_message_rating or
+       outgoing_message_rating_preview : the identity should have already
+       been updated...  On 2.x something was broken, abd there was indeed
+       need for this. */
+    identity_copy = identity_dup(identity);
+    if (identity_copy == NULL) {
+        status = PEP_OUT_OF_MEMORY;
+        goto end;
+    }
+    status = update_identity(session, identity_copy);
+    if (status != PEP_STATUS_OK)
+        goto end;
+    /* ...If we arrived here the identity has been set, so we can be sure that
+       it exists in the database.  */
+
+ end:
+    free_identity(identity_copy);
+    if (status != PEP_STATUS_OK) echo_log(stderr, "make_sure_identity_exists: status is %i\n", (int) status);
+    return status;
+}
+
+
+/* Rate limitation
+ * ***************************************************************** */
+
+/**
+ *  <!--       echo_get_below_rate_limit()       -->
+ *
+ *  @brief Check whether we are below the Echo rate limit for the given
+ *         identity; in other words, check whether we can send an Echo
+ *         message to that identity without flooding it.
+ *
+ *  @param[in]   session             session
+ *  @param[in]   identity            the identity we are dealing with
+ *  @param[out]  below_rate_limit_p  true iff sending is allowed; only meaningful
+ *                                   on success
+ *
+ *  @retval PEP_STATUS_OK            success
+ *  @retval any other value          error
+ *
+ */
+static PEP_STATUS echo_get_below_rate_limit(PEP_SESSION session,
+                                            const pEp_identity *identity,
+                                            bool *below_rate_limit_p)
+{
+    assert(session && identity && below_rate_limit_p);
+    if(! (session && identity && below_rate_limit_p))
+        return PEP_ILLEGAL_VALUE;
+    PEP_STATUS status = PEP_STATUS_OK;
+    int sql_status = SQLITE_OK;
+    int result = false;
+
+    /* Initialise the outout variable to a safe value out of defensiveness. */
+    * below_rate_limit_p = false;
+
+    /* First make sure that the identity is already in the database. */
+    status = make_sure_identity_exists(session, identity);
+    if (status != PEP_STATUS_OK)
+        goto end;
+
+    /* Bind SQL statement parameters. */
+    reset_and_clear_bindings(session->echo_get_echo_below_rate_limit);
+    sql_status = sqlite3_bind_int(session->echo_get_echo_below_rate_limit,
+                                  1, PEP_MINIMUM_ECHO_MESSAGES_PERIOD_IN_SECONDS);
+    ON_SQL_ERROR_SET_STATUS_AND_GOTO;
+    sql_status = sqlite3_bind_text(session->echo_get_echo_below_rate_limit,
+                                   2, identity->address, -1, SQLITE_STATIC);
+    ON_SQL_ERROR_SET_STATUS_AND_GOTO;
+    sql_status = sqlite3_bind_text(session->echo_get_echo_below_rate_limit,
+                                   3, identity->user_id, -1, SQLITE_STATIC);
+    ON_SQL_ERROR_SET_STATUS_AND_GOTO;
+
+    /* Execute it.  The result must be one row with one column. */
+    sql_status = sqlite3_step(session->echo_get_echo_below_rate_limit);
+    ON_SQL_ERROR_SET_STATUS_AND_GOTO;
+    assert(sql_status == SQLITE_ROW);
+    assert(sqlite3_column_count(session->echo_get_echo_below_rate_limit) == 1);
+
+    result = sqlite3_column_int(session->echo_get_echo_below_rate_limit, 0);
+
+ end:
+    if (status == PEP_STATUS_OK)
+        * below_rate_limit_p = result;
+    if (status != PEP_STATUS_OK) echo_log(stderr, "echo_get_below_rate_limit: status is %i\n", (int) status);
+    return status;
+}
+
+/**
+ *  <!--       echo_set_last_echo_timestamp()       -->
+ *
+ *  @brief Write the current time as the last-echo timestamp for the given
+ *         identity.
+ *
+ *  @param[in]   session             session
+ *  @param[in]   identity            the identity we are dealing with
+ *
+ *  @retval PEP_STATUS_OK            success
+ *  @retval any other value          error
+ *
+ */
+static PEP_STATUS echo_set_last_echo_timestap(PEP_SESSION session,
+                                              const pEp_identity *identity)
+{
+    assert(session && identity
+           /* This does not make much sense if used on own identities, but there
+              is no harm in allowing that anyway. */);
+    if(! (session && identity))
+        return PEP_ILLEGAL_VALUE;
+    PEP_STATUS status = PEP_STATUS_OK;
+    int sql_status = SQLITE_OK;
+
+    /* First make sure that the identity is already in the database. */
+    status = make_sure_identity_exists(session, identity);
+    if (status != PEP_STATUS_OK)
+        goto end;
+
+    /* Bind SQL statement parameters. */
+    reset_and_clear_bindings(session->echo_set_timestamp);
+    sql_status = sqlite3_bind_text(session->echo_set_timestamp,
+                                   1, identity->address, -1, SQLITE_STATIC);
+    ON_SQL_ERROR_SET_STATUS_AND_GOTO;
+    sql_status = sqlite3_bind_text(session->echo_set_timestamp,
+                                   2, identity->user_id, -1, SQLITE_STATIC);
+    ON_SQL_ERROR_SET_STATUS_AND_GOTO;
+
+    /* Execute it. */
+    sql_status = sqlite3_step(session->echo_set_timestamp);
+    ON_SQL_ERROR_SET_STATUS_AND_GOTO;
+    assert(sql_status == SQLITE_DONE);
+
+    echo_log(stderr, "set last Echo timestamp to now for %s <%s>\n", (identity->username ? identity->username : "NOUSERNAME"), (identity->address ? identity->address : "NOADDRESS"));
+
+ end:
+    if (status != PEP_STATUS_OK) echo_log(stderr, "echo_set_last_echo_timestamp: status is %i\n", (int) status);
+    return status;
 }
 
 
@@ -190,6 +426,11 @@ static PEP_STATUS echo_challenge_for_identity(PEP_SESSION session,
     PEP_STATUS status = PEP_STATUS_OK;
     int sql_status;
 
+    /* First make sure that the identity is already in the database. */
+    status = make_sure_identity_exists(session, identity);
+    if (status != PEP_STATUS_OK)
+        goto end;
+
     /* Look at the database.  First check if we have a stored challenge... */
     reset_and_clear_bindings(session->echo_get_challenge);
     sql_status = sqlite3_bind_text(session->echo_get_challenge,
@@ -201,28 +442,8 @@ static PEP_STATUS echo_challenge_for_identity(PEP_SESSION session,
     sql_status = sqlite3_step(session->echo_get_challenge);
     ON_SQL_ERROR_SET_STATUS_AND_GOTO;
     const void *stored_challenge;
-    if (sql_status != SQLITE_ROW) {
-        /* The identity is not in the database yet: make sure it is there before
-           we alter the row in order to set its challenge field.
-
-           FIXME FIXME FIXME: this is not supposed to happen, but it does at
-           least on 2.x.   There should be no need to call update_identity
-           if this is called from decrypt_message or outgoing_message_rating or
-           outgoing_message_rating_preview .
-
-           Something in 2.x is badly broken, and not worth fixing.  In 3.x we
-           shall find the actual problem. */
-        identity_copy = identity_dup(identity);
-        if (identity_copy == NULL) {
-            status = PEP_OUT_OF_MEMORY;
-            goto end;
-        }
-        status = update_identity(session, identity_copy);
-        if (status != PEP_STATUS_OK)
-            goto end;
-        stored_challenge = NULL;
-    }
-    else if (sqlite3_column_type(session->echo_get_challenge, 0) == SQLITE_NULL)
+    assert(sql_status == SQLITE_ROW);
+    if (sqlite3_column_type(session->echo_get_challenge, 0) == SQLITE_NULL)
         stored_challenge = NULL;
     else
         stored_challenge = sqlite3_column_blob(session->echo_get_challenge, 0);
@@ -296,7 +517,7 @@ PEP_STATUS handle_pong(PEP_SESSION session,
     else {
         /* Good response.  Okay, notify the application that some rating
            might have improved.  */
-        fprintf(stderr, "session->notifyHandshake is %p\n", session->notifyHandshake);
+        fprintf(stderr, "session->notifyHandshake is %s\n", (session->notifyHandshake == NULL ? "NULL" : "non-NULL"));
         if (session->notifyHandshake == NULL)
             return PEP_SYNC_NO_NOTIFY_CALLBACK;
         pEp_identity *own_identity_copy = identity_dup(own_identity);
@@ -348,7 +569,11 @@ static Distribution_t* create_Ping_or_Pong_message(const pEpUUID uuid,
 
 /* A helper factoring the common code in send_ping and send_pong.
    The Boolean flag determines what kind of message is sent.  The uuid field
-   is used for challenge / response. */
+   is used for challenge / response.
+
+   Checks for the protocol being enabled and for rate limitation are implemented
+   here, since the logic is always the same independently from the kind of
+   message. */
 static PEP_STATUS send_ping_or_pong(PEP_SESSION session,
                                     const pEp_identity *from,
                                     const pEp_identity *to,
@@ -359,6 +584,7 @@ static PEP_STATUS send_ping_or_pong(PEP_SESSION session,
     if (! (session && session->messageToSend && from && to))
         return PEP_ILLEGAL_VALUE;
 
+    /* Do nothing, and succeed, if the Echo protocol is disabled. */
     if (! session->enable_echo_protocol) {
         fprintf(stderr,  "* Echo protocol disabled: not sending a %s to %s <%s>\n", (ping ? "Ping" : "Pong"), (to->username ? to->username : "<no username>"), (to->address ? to->address : "<no address>"));
         return PEP_STATUS_OK;
@@ -366,6 +592,19 @@ static PEP_STATUS send_ping_or_pong(PEP_SESSION session,
 
     PEP_STATUS status = PEP_STATUS_OK;
     char *data = NULL;
+
+    /* Do nothing, and succeed, if sending another Echo message would violate
+       the rate limitation. */
+    bool below_rate_limit;
+    status = echo_get_below_rate_limit(session, to, & below_rate_limit);
+    if (status != PEP_STATUS_OK) {
+        echo_log(stderr, "echo_get_below_rate_limit failed with status %i on %s <%s>\n", (int) status, (to->username ? to->username : "<no username>"), (to->address ? to->address : "<no address>"));
+        return status;
+    }
+    if (! below_rate_limit) {
+        echo_log(stderr, "rate limit exceeded: not sending a %s to %s <%s>\n", (ping ? "Ping" : "Pong"), (to->username ? to->username : "<no username>"), (to->address ? to->address : "<no address>"));
+        return PEP_STATUS_OK;
+    }
 
     /* Craft an attachment. */
     Distribution_t *msg = create_Ping_or_Pong_message(uuid, ping);
@@ -415,9 +654,16 @@ static PEP_STATUS send_ping_or_pong(PEP_SESSION session,
         return status;
     }
 
+    echo_log(stderr, "sent %s from %s <%s> to %s <%s>\n", (ping ? "Ping" : "Pong"), from->username, from->address, to->username, to->address);
+
+    /* If we arrived here then we actually sent a message with success.  Let us
+       remember this time for use in rate limitation. */
+    status = echo_set_last_echo_timestap(session, to);
+    echo_log(stderr, "echo_set_last_echo_timestap: status is %i\n", (int) status);
+
     /* In case of success we must *not* free the message: the called function
        gets ownership of it. */
-    return PEP_STATUS_OK;
+    return status;
 }
 
 PEP_STATUS send_ping(PEP_SESSION session,
@@ -435,7 +681,7 @@ PEP_STATUS send_ping(PEP_SESSION session,
 PEP_STATUS send_pong(PEP_SESSION session,
                      const message *ping_message,
                      const Distribution_t *ping_distribution_message) {
-fprintf(stderr, "WWWW session->notifyHandshake is %p\n", session->notifyHandshake);
+    fprintf(stderr, "session->notifyHandshake is %s\n", (session->notifyHandshake == NULL ? "NULL" : "non-NULL"));
     /* Argument checks.  No need to check for messageToSend here, since we
        will check later when actually sending. */
     assert(session && ping_message && ping_distribution_message);
